--- a/Teoria_de_Juegos_e_Inteligencia_Artificial_Alejandro_Delgado_53344428E.ipynb
+++ b/Teoria_de_Juegos_e_Inteligencia_Artificial_Alejandro_Delgado_53344428E.ipynb
@@ -32,12 +32,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O_o70unS2OCI",
-        "outputId": "0ec2ff95-6123-4740-fb1f-45c22c081b70"
+        "outputId": "389bc7f7-ec62-4a35-e93c-bd277d3cbdba"
       },
       "source": [
         "!pip install nashpy"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
         "import nashpy as nash\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nU5fEXvb2B-m",
-        "outputId": "6ea78142-c22a-4ed2-ffa9-9826a0be82c0"
+        "outputId": "9ae2c7da-6751-4590-fa64-054da28a4282"
       },
       "source": [
         "A = np.array([[-8, 0], [-10, -1]]) # A es el jugador filas.\n",
@@ -93,7 +93,7 @@
         "juego1 = nash.Game(A,B)\n",
         "juego1"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -111,7 +111,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -131,14 +131,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iSX4Gayf2dnd",
-        "outputId": "95ef29cb-55a3-44dd-f215-a6026281fa56"
+        "outputId": "2975e56a-e926-41a8-cfe6-ea0d29c300cc"
       },
       "source": [
         "equilibrios = juego1.support_enumeration()\n",
         "for eq in equilibrios:\n",
         "    print(eq)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x7D5FL1e2nln",
-        "outputId": "5603037a-8c83-4f57-9801-80b4a060b7a8"
+        "outputId": "288fae67-3e60-41d9-e98b-557b276121e6"
       },
       "source": [
         "A2 = np.array([[6, 4, 4, 3],\n",
@@ -180,7 +180,7 @@
         "juego2 = nash.Game(A2, B2)\n",
         "juego2"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -222,14 +222,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PTNTe5kH98Pj",
-        "outputId": "94309092-ceaa-47c6-932e-806ee3af2d34"
+        "outputId": "05fefbaf-c9fc-43df-b5a6-c69ade3aab22"
       },
       "source": [
         "equilibrios = juego2.support_enumeration()\n",
         "for eq in equilibrios:\n",
         "    print(eq)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +437,7 @@
         "              self.estado_actual[px][py] = 'O'\n",
         "              self.turno_jugador = 'X'"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -447,13 +447,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HMm8sCeDDDVi",
-        "outputId": "e6f05945-162b-4674-aa53-c09e24fc6292"
+        "outputId": "1a77dddf-4467-415f-a7e7-3f3035c103d4"
       },
       "source": [
         "g = Juego()\n",
         "g.jugar()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,66 +463,66 @@
             ".| .| .| \n",
             ".| .| .| \n",
             "\n",
-            "Evaluacion: 4.118149s\n",
+            "Evaluacion: 2.6799402s\n",
             "Movimientos Recomendados: X = 0, Y = 0\n",
-            "X coordenada: 2\n",
+            "X coordenada: 1\n",
             "Y coordenada: 0\n",
             ".| .| .| \n",
-            ".| .| .| \n",
             "X| .| .| \n",
-            "\n",
             ".| .| .| \n",
-            ".| O| .| \n",
-            "X| .| .| \n",
             "\n",
-            "Evaluacion: 0.0305676s\n",
-            "Movimientos Recomendados: X = 0, Y = 0\n",
+            "O| .| .| \n",
+            "X| .| .| \n",
+            ".| .| .| \n",
+            "\n",
+            "Evaluacion: 0.0351079s\n",
+            "Movimientos Recomendados: X = 0, Y = 1\n",
             "X coordenada: 1\n",
-            "Y coordenada: 3\n",
-            "Movimiento no valido, prueba otra vez.\n",
-            "Evaluacion: 0.0593412s\n",
-            "Movimientos Recomendados: X = 0, Y = 0\n",
-            "X coordenada: 1\n",
-            "Y coordenada: 2\n",
-            ".| .| .| \n",
-            ".| O| X| \n",
-            "X| .| .| \n",
-            "\n",
-            ".| O| .| \n",
-            ".| O| X| \n",
-            "X| .| .| \n",
-            "\n",
-            "Evaluacion: 0.0006654s\n",
-            "Movimientos Recomendados: X = 2, Y = 1\n",
-            "X coordenada: 2\n",
             "Y coordenada: 1\n",
-            ".| O| .| \n",
-            ".| O| X| \n",
+            "O| .| .| \n",
             "X| X| .| \n",
+            ".| .| .| \n",
             "\n",
-            ".| O| .| \n",
-            ".| O| X| \n",
+            "O| .| .| \n",
             "X| X| O| \n",
+            ".| .| .| \n",
             "\n",
-            "Evaluacion: 9.94e-05s\n",
-            "Movimientos Recomendados: X = 0, Y = 0\n",
-            "X coordenada: 0\n",
+            "Evaluacion: 0.0011826s\n",
+            "Movimientos Recomendados: X = 0, Y = 1\n",
+            "X coordenada: 1\n",
             "Y coordenada: 0\n",
-            "X| O| .| \n",
-            ".| O| X| \n",
+            "Movimiento no valido, prueba otra vez.\n",
+            "Evaluacion: 0.0022385s\n",
+            "Movimientos Recomendados: X = 0, Y = 1\n",
+            "X coordenada: 0\n",
+            "Y coordenada: 1\n",
+            "O| X| .| \n",
             "X| X| O| \n",
+            ".| .| .| \n",
             "\n",
-            "X| O| .| \n",
-            "O| O| X| \n",
+            "O| X| .| \n",
             "X| X| O| \n",
+            ".| O| .| \n",
             "\n",
-            "Evaluacion: 2.22e-05s\n",
+            "Evaluacion: 8.61e-05s\n",
             "Movimientos Recomendados: X = 0, Y = 2\n",
             "X coordenada: 0\n",
             "Y coordenada: 2\n",
-            "X| O| X| \n",
-            "O| O| X| \n",
+            "O| X| X| \n",
             "X| X| O| \n",
+            ".| O| .| \n",
+            "\n",
+            "O| X| X| \n",
+            "X| X| O| \n",
+            "O| O| .| \n",
+            "\n",
+            "Evaluacion: 2.46e-05s\n",
+            "Movimientos Recomendados: X = 2, Y = 2\n",
+            "X coordenada: 2\n",
+            "Y coordenada: 2\n",
+            "O| X| X| \n",
+            "X| X| O| \n",
+            "O| O| X| \n",
             "\n",
             "Empate!\n"
           ]
@@ -549,29 +549,92 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "TOB4zRutFHcd"
-      },
       "source": [
-        "def max_alfa_beta(self, alfa, beta):\n",
+        "import time\n",
+        "\n",
+        "class Juego:\n",
+        "    def __init__(self):\n",
+        "        self.iniciar_juego()\n",
+        "\n",
+        "    def iniciar_juego(self):\n",
+        "        self.estado_actual = [['.','.','.'],\n",
+        "                              ['.','.','.'],\n",
+        "                              ['.','.','.']]\n",
+        "\n",
+        "        # X siempre juega primero:\n",
+        "        self.turno_jugador = 'X'\n",
+        "\n",
+        "    def dibujar_tablero(self):\n",
+        "        for i in range(0, 3):\n",
+        "            for j in range(0, 3):\n",
+        "                print('{}|'.format(self.estado_actual[i][j]), end=\" \")\n",
+        "            print()\n",
+        "        print()\n",
+        "\n",
+        "    def es_valido(self, px, py):\n",
+        "      if px < 0 or px > 2 or py < 0 or py > 2:\n",
+        "          return False\n",
+        "      elif self.estado_actual[px][py] != '.':\n",
+        "          return False\n",
+        "      else:\n",
+        "          return True\n",
+        "\n",
+        "    def es_fin(self):\n",
+        "      # Victoria en vertical:\n",
+        "      for i in range(0, 3):\n",
+        "          if (self.estado_actual[0][i] != '.' and\n",
+        "              self.estado_actual[0][i] == self.estado_actual[1][i] and\n",
+        "              self.estado_actual[1][i] == self.estado_actual[2][i]):\n",
+        "              return self.estado_actual[0][i]\n",
+        "\n",
+        "      # Victoria en Horizontal:\n",
+        "      for i in range(0, 3):\n",
+        "          if (self.estado_actual[i] == ['X', 'X', 'X']):\n",
+        "              return 'X'\n",
+        "          elif (self.estado_actual[i] == ['O', 'O', 'O']):\n",
+        "              return 'O'\n",
+        "\n",
+        "      # Victoria diagonal principal:\n",
+        "      if (self.estado_actual[0][0] != '.' and\n",
+        "          self.estado_actual[0][0] == self.estado_actual[1][1] and\n",
+        "          self.estado_actual[0][0] == self.estado_actual[2][2]):\n",
+        "          return self.estado_actual[0][0]\n",
+        "\n",
+        "      # Victoria diagonal secundaria:\n",
+        "      if (self.estado_actual[0][2] != '.' and\n",
+        "          self.estado_actual[0][2] == self.estado_actual[1][1] and\n",
+        "          self.estado_actual[0][2] == self.estado_actual[2][0]):\n",
+        "          return self.estado_actual[0][2]\n",
+        "\n",
+        "      # Mesa llena:\n",
+        "      for i in range(0, 3):\n",
+        "          for j in range(0, 3):\n",
+        "              # Si hay espacio, seguimos jugando:\n",
+        "              if (self.estado_actual[i][j] == '.'):\n",
+        "                  return None\n",
+        "\n",
+        "      # Empate, mesa llena sin victoria:\n",
+        "      return '.'\n",
+        "\n",
+        "    def max_alfa_beta(self, alfa, beta):\n",
         "        maxv = -2\n",
         "        px = None\n",
         "        py = None\n",
         "\n",
-        "        resultado = self.es_final()\n",
+        "        resultado = self.es_fin()\n",
         "\n",
         "        if resultado == 'X':\n",
         "            return (-1, 0, 0)\n",
         "        elif resultado == 'O':\n",
         "            return (1, 0, 0)\n",
-        "        elif result == '.':\n",
+        "        elif resultado == '.':\n",
         "            return (0, 0, 0)\n",
         "\n",
         "        for i in range(0, 3):\n",
         "            for j in range(0, 3):\n",
         "                if self.estado_actual[i][j] == '.':\n",
         "                    self.estado_actual[i][j] = 'O'\n",
-        "                    (m, min_i, in_j) = self.min_alfa_beta(alfa, beta)\n",
+        "                    (m, min_i, min_j) = self.min_alfa_beta(alfa, beta)\n",
         "                    if m > maxv:\n",
         "                        maxv = m\n",
         "                        px = i\n",
@@ -585,25 +648,16 @@
         "                    if maxv > alfa:\n",
         "                        alfa = maxv\n",
         "\n",
-        "        return (maxv, px, py)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RDZcv29POvK-"
-      },
-      "source": [
-        "def min_alfa_beta(self, alfa, beta):\n",
+        "        return (maxv, px, py)\n",
+        "\n",
+        "    def min_alfa_beta(self, alfa, beta):\n",
         "\n",
         "        minv = 2\n",
         "\n",
         "        qx = None\n",
         "        qy = None\n",
         "\n",
-        "        resultado = self.es_final()\n",
+        "        resultado = self.es_fin()\n",
         "\n",
         "        if resultado == 'X':\n",
         "            return (-1, 0, 0)\n",
@@ -629,67 +683,144 @@
         "                    if minv < beta:\n",
         "                        beta = minv\n",
         "\n",
-        "        return (minv, qx, qy)"
+        "        return (minv, qx, qy)\n",
+        "\n",
+        "    def jugar_alfa_beta(self):\n",
+        "\n",
+        "      while True:\n",
+        "        self.dibujar_tablero()\n",
+        "        self.resultado = self.es_fin()\n",
+        "\n",
+        "        if self.resultado != None:\n",
+        "\n",
+        "          if self.resultado == 'X':\n",
+        "            print('Gana X!')\n",
+        "\n",
+        "          elif self.resultado == 'O':\n",
+        "            print('Gana O!')\n",
+        "\n",
+        "          elif self.resultado == '.':\n",
+        "            print(\"Empate\")\n",
+        "\n",
+        "          self.iniciar_juego()\n",
+        "          return\n",
+        "\n",
+        "        if self.turno_jugador == 'X':\n",
+        "\n",
+        "            while True:\n",
+        "              inicio = time.time()\n",
+        "              (m, qx, qy) = self.min_alfa_beta(-2, 2)\n",
+        "              fin = time.time()\n",
+        "              print('Tiempo de evaluacion: {}s'.format(round(fin - inicio, 7)))\n",
+        "              print('Movimiento recomendado: X = {}, Y = {}'.format(qx, qy))\n",
+        "\n",
+        "              px = int(input('X coordenada: '))\n",
+        "              py = int(input('Y coordenada: '))\n",
+        "\n",
+        "              qx = px\n",
+        "              qy = py\n",
+        "\n",
+        "              if self.es_valido(px, py):\n",
+        "                self.estado_actual[px][py] = 'X'\n",
+        "                self.turno_jugador = 'O'\n",
+        "                break\n",
+        "              else:\n",
+        "                print('Movimiento no válido. Prueba con otro movimiento.')\n",
+        "\n",
+        "        else:\n",
+        "            (m, px, py) = self.max_alfa_beta(-2, 2)\n",
+        "            self.estado_actual[px][py] = 'O'\n",
+        "            self.turno_jugador = 'X'"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "gRHp1c5hFZhe"
+      },
+      "execution_count": 35,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "hajLHAjPR032"
-      },
       "source": [
-        "def jugar_alfa_beta(self):\n",
-        "  while True:\n",
-        "    self.dibujar_tablero()\n",
-        "    self.resultado = self.es_final()\n",
-        "\n",
-        "    if self.resultado != None:\n",
-        "\n",
-        "      if self.resultado == 'X':\n",
-        "        print('Gana X!')\n",
-        "\n",
-        "      elif self.resultado == 'O':\n",
-        "        print('Gana O!')\n",
-        "\n",
-        "      elif self.resultado == '.':\n",
-        "        print(\"Empate\")\n",
-        "\n",
-        "      self.inicializar_estado()\n",
-        "      return\n",
-        "\n",
-        "      if self.turno == 'X':\n",
-        "        while True:\n",
-        "          inicio = time.time()\n",
-        "          (m, qx, qy) = self.min_alfa_beta(-2, 2)\n",
-        "          fin = time.time()\n",
-        "          print('Tiempo de evaluacion: {}s'.format(round(fin - inicio, 7)))\n",
-        "          print('Movimiento recomendado: X = {}, Y = {}'.format(qx, qy))\n",
-        "\n",
-        "          px = int(input('X coordenada: '))\n",
-        "          py = int(input('Y coordenada: '))\n",
-        "\n",
-        "          # No son necesarias, estas variables se utilizan\n",
-        "          # para mostrar al jugador el movimiento sugerido\n",
-        "          # por la IA, no hay que asignarle valores.\n",
-        "          # qx = __\n",
-        "          # qy = __\n",
-        "\n",
-        "      if self.es_movimiento_valido(px, py):\n",
-        "          self.estado_actual[px][py] = 'X'\n",
-        "          self.turno = 'O'\n",
-        "          break\n",
-        "      else:\n",
-        "          print('Movimiento no válido. Prueba con otro movimiento.')\n",
-        "\n",
-        "  else:\n",
-        "         (m, px, py) = self.max_alfa_beta(-2, 2)\n",
-        "         self.estado_actual[px][py] = 'O'\n",
-        "         self.turno = 'X'"
+        "g = Juego()\n",
+        "g.jugar_alfa_beta()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bt32UyobCr6L",
+        "outputId": "8617e1d7-403e-441b-dada-2e39acccbfa5"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".| .| .| \n",
+            ".| .| .| \n",
+            ".| .| .| \n",
+            "\n",
+            "Tiempo de evaluacion: 0.0783947s\n",
+            "Movimiento recomendado: X = 0, Y = 0\n",
+            "X coordenada: 0\n",
+            "Y coordenada: 0\n",
+            "X| .| .| \n",
+            ".| .| .| \n",
+            ".| .| .| \n",
+            "\n",
+            "X| .| .| \n",
+            ".| O| .| \n",
+            ".| .| .| \n",
+            "\n",
+            "Tiempo de evaluacion: 0.0034666s\n",
+            "Movimiento recomendado: X = 0, Y = 1\n",
+            "X coordenada: 0\n",
+            "Y coordenada: 1\n",
+            "X| X| .| \n",
+            ".| O| .| \n",
+            ".| .| .| \n",
+            "\n",
+            "X| X| O| \n",
+            ".| O| .| \n",
+            ".| .| .| \n",
+            "\n",
+            "Tiempo de evaluacion: 0.000308s\n",
+            "Movimiento recomendado: X = 2, Y = 0\n",
+            "X coordenada: 2\n",
+            "Y coordenada: 0\n",
+            "X| X| O| \n",
+            ".| O| .| \n",
+            "X| .| .| \n",
+            "\n",
+            "X| X| O| \n",
+            "O| O| .| \n",
+            "X| .| .| \n",
+            "\n",
+            "Tiempo de evaluacion: 0.0001099s\n",
+            "Movimiento recomendado: X = 1, Y = 2\n",
+            "X coordenada: 1\n",
+            "Y coordenada: 2\n",
+            "X| X| O| \n",
+            "O| O| X| \n",
+            "X| .| .| \n",
+            "\n",
+            "X| X| O| \n",
+            "O| O| X| \n",
+            "X| O| .| \n",
+            "\n",
+            "Tiempo de evaluacion: 1.84e-05s\n",
+            "Movimiento recomendado: X = 2, Y = 2\n",
+            "X coordenada: 2\n",
+            "Y coordenada: 2\n",
+            "X| X| O| \n",
+            "O| O| X| \n",
+            "X| O| X| \n",
+            "\n",
+            "Empate\n"
+          ]
+        }
+      ]
     }
   ]
 }
